package app.downloader;

import java.io.IOException;
import java.nio.file.FileAlreadyExistsException;
import java.nio.file.Path;

/**
 * Defines common interface for Downloaders
 */
public interface IDownloader {

    /**
     * Overwrite the existing file?
     *
     * @param replace true for yes and false for no (false is default).
     */
    void setReplaceExisting(boolean replace);

    /**
     * Timeout. Unsupported mostly
     *
     * @param seconds
     */
    void setTimeout(int seconds);

    /**
     * Downloads and stores one item (photo, video, ...)
     * from the Google Photos.
     *
     * @param url        item url. This url is auto generated by Google Photos Java API library.
     * @param targetPath local disc file-path where the item should be stored.
     *
     * @throws IOException
     * @throws FileAlreadyExistsException if the targeted file already exists
     *                                    AND replaceExisting has been set to false
     */
    void downloadItem(String url, Path targetPath)
            throws IOException, FileAlreadyExistsException;
}
